--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "styled-components": "^3.2.6"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.5.1"
   }
 }
