--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "create-next-example-app",
   "scripts": {
-    "dev": "next",
+    "dev": "nodemon -w app.js app.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "next": "6.0.0",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.5.1"
+    "babel-plugin-styled-components": "^1.5.1",
+    "nodemon": "^1.17.3"
   }
 }
