--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.4.1",
     "react-color": "^2.14.1",
     "react-dom": "^16.4.1",
+    "react-draggable": "^3.0.5",
     "react-webcam": "^1.0.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
