--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dat.gui": "^0.7.2",
     "express": "^4.16.3",
     "next": "^6.1.1",
+    "next-images": "^0.10.5",
     "p2": "^0.7.1",
     "react": "^16.4.1",
     "react-color": "^2.14.1",
