--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-images": "^0.10.5",
     "p2": "^0.7.1",
     "react": "^16.4.1",
+    "react-autobind": "^1.0.6",
     "react-color": "^2.14.1",
     "react-dom": "^16.4.1",
     "react-draggable": "^3.0.5",
