--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.4.2",
     "react-draggable": "^3.0.5",
     "react-webcam": "^1.0.0",
+    "schemapack": "^1.4.2",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "styled-components": "^3.4.5"
