--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
       "bru1": {
         "min": 0,
         "max": 1
+      },
+      "sfo1": {
+        "min": 0,
+        "max": 1
       }
     }
   }
