--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-color": "^2.14.1",
     "react-dom": "^16.5.2",
     "react-draggable": "^3.0.5",
+    "react-redux": "^5.0.7",
     "react-webcam": "^1.0.4",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "schemapack": "^1.4.2",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
