--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
+    "downloadjs": "^1.4.7",
     "express": "^4.16.4",
     "next": "^7.0.2",
     "next-images": "^1.0.1",
