--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "react-redux": "^5.1.1",
     "react-webcam": "^1.0.4",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
     "schemapack": "^1.4.2",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "styled-components": "^4.1.1"
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "styled-components": "^4.1.2"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0",
-    "nodemon": "^1.18.6"
+    "babel-plugin-styled-components": "^1.9.1",
+    "nodemon": "^1.18.7",
+    "redux-logger": "^3.0.6"
   }
 }
