--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
       "next/babel"
     ],
     "plugins": [
-      ["babel-plugin-styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
+      ["babel-plugin-styled-components", { "ssr": true, "displayName": true, "preprocess": false } ],
+      "inline-react-svg"
     ]
 }
