--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cross-env": "^5.2.0",
     "downloadjs": "^1.4.7",
     "express": "^4.16.4",
-    "next": "^8.1.0",
+    "next": "^8.1.1-canary.19",
     "p2": "^0.7.1",
     "pixi-filters": "^2.7.1",
     "pixi.js": "^4.8.7",
