--- a/www/package.json
+++ b/www/package.json
@@ -1,11 +1,8 @@
 {
   "name": "convos",
   "scripts": {
-    "dev": "nodemon -w app.js app.js",
-    "debug": "nodemon --inspect-brk -w app.js app.js",
-    "build": "next build",
-    "start": "cross-env NODE_ENV=production node app.js",
-    "deploy": "now & now ln & now rm convos -sy"
+    "dev": "next",
+    "build": "next build"
   },
   "repository": {
     "type": "git",
@@ -15,7 +12,6 @@
     "babel-plugin-inline-react-svg": "^1.1.0",
     "cross-env": "^5.2.0",
     "downloadjs": "^1.4.7",
-    "express": "^4.16.4",
     "next": "^8.1.1-canary.19",
     "p2": "^0.7.1",
     "pixi-filters": "^2.7.1",
@@ -27,8 +23,7 @@
     "react-redux": "^7.0.3",
     "react-webcam": "^1.1.1",
     "redux": "^4.0.1",
-    "schemapack": "^1.4.2",
-    "socket.io": "^2.2.0",
+    "schemas": "file:../lib/schemas",
     "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0"
   },
