--- a/now.json
+++ b/now.json
@@ -13,9 +13,7 @@
           "src": "/room/(.*)",
           "dest": "/www/room?roomId=$1",
           "headers": {
-            "x-request-path": "$1",
-            "s-maxage": "432000",
-            "max-age": "3600"
+            "cache-control": "max-age=3600, s-maxage=432000"
           }
         },
         {
@@ -23,8 +21,7 @@
           "dest": "/www/$1",
           "headers": {
             "x-request-path": "$1",
-            "s-maxage": "432000",
-            "max-age": "3600"
+            "cache-control": "max-age=3600, s-maxage=432000"
           }
         }
     ]
