--- a/www/.babelrc
+++ b/www/.babelrc
@@ -3,7 +3,6 @@
       "next/babel"
     ],
     "plugins": [
-      ["babel-plugin-styled-components", { "ssr": true, "displayName": true, "preprocess": false } ],
-      "inline-react-svg"
+      ["babel-plugin-styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
     ]
 }
