--- a/www/package.json
+++ b/www/package.json
@@ -9,22 +9,22 @@
     "url": "https://github.com/Foxhunt/Convos.git"
   },
   "dependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.0",
+    "@svgr/webpack": "^4.3.0",
     "cross-env": "^5.2.0",
     "downloadjs": "^1.4.7",
-    "next": "^8.1.1-canary.33",
+    "next": "^8.1.1-canary.52",
     "p2": "^0.7.1",
     "pixi-filters": "^2.7.1",
-    "pixi.js": "^4.8.7",
+    "pixi.js": "^4.8.8",
     "react": "^16.8.6",
     "react-autobind": "^1.0.6",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
+    "react-redux": "^7.1.0",
     "react-webcam": "^1.1.1",
     "redux": "^4.0.1",
     "socket.io-client": "^2.2.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.3.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0",
