--- a/www/package.json
+++ b/www/package.json
@@ -12,7 +12,7 @@
     "@svgr/webpack": "^4.3.2",
     "cross-env": "^5.2.1",
     "downloadjs": "^1.4.7",
-    "next": "^8.1.1-canary.70",
+    "next": "^9.0.5",
     "p2": "^0.7.1",
     "pixi-filters": "^2.7.1",
     "pixi.js": "^4.8.8",
